# CoScan

co_scan/: CMakeLists.txt  coscan.rosinstall  package.xml
co_scan/include/se2/: se2.h
co_scan/launch/: coscan.launch
co_scan/src/: data_engine.cpp  data_engine.h  global.cpp  navigation.cpp  omt_solver.h
co_scan/src/geodesic/: Chen_Han.cpp  Chen_Han.h  DistanceApproach.cpp  ExactDGPMethod.cpp  RichModel.cpp
co_scan/src/tsp/: threads.h  tsp.cpp
